# EthicalBank

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md  config.py  main.py  pyproject.toml  requirements.txt  start.sh
backend/services/: ai.py  ai_insights.py  chatbot.py  perception.py  privacy.py  savings.py  transactions.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/scripts/: api-demo.js  create-database.js  create-demo-data.js  create-demo-user.js  setup-database.js  setup-database.ts  test-mongo.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page-new.tsx  page.tsx
frontend/src/components/: AIChatbot.tsx  LoanEligibilityChecker.tsx  PrefetchProvider.tsx  ProfileCompletionCheck.tsx  app-layout.tsx  header.tsx  sidebar.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/contexts/: AuthContext.tsx  LoadingContext.tsx
frontend/src/hooks/: useAPI.ts  useBackend.ts
frontend/src/lib/: api-client.ts  backend-api.ts  config.ts  cors.ts  data-prefetch.ts  utils.ts
frontend/src/types/: index.ts
scripts/: create-test-user.js
src/app/: layout.tsx  page.tsx
src/app/accounts/: page.tsx
src/app/ai-insights/: page.tsx
src/app/savings/: page.tsx
src/app/settings/: page.tsx
src/app/transactions/: page.tsx
src/components/: AIChatbot.tsx  sidebar.tsx  theme-provider.tsx  theme-toggle.tsx
src/hooks/: useAPI.ts
src/lib/: backend-api.ts  config.ts  utils.ts
src/lib/auth/: index.ts  middleware.ts  utils.ts
src/lib/db/: connection.ts  utils.ts
src/types/: index.ts
(+65 files in other folders)
