[project]
name = "backend"
version = "0.1.0"
description = "Backend for EthicalBank application - GHCI Hackathon 2025"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "unicorn>=2.1.4",
]
